Fix bug menu on mobile

--- a/assets/css/about-responsive.css
+++ b/assets/css/about-responsive.css
@@ -37,6 +37,19 @@
         display: none;
     }
 
+    .menu-action__cart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+        color: #fff;
+        width: 42px;
+        height: 42px;
+        background: transparent;
+        border: 2px solid #fff;
+        border-radius: 50%;
+    }
+
     .toogle-menu {
         width: 32px;
         color: #fff;
@@ -214,13 +227,17 @@
     .logo__branch {
         font-size: 24px;
     }
+    
+    .menu-action__cart {
+        margin-left: auto;
+    }
 
     .toogle-menu {
         width: 28px;
     }
 
     .menu-drawer {
-        inset: 0;
+        inset: 0 0 0 25%;
     }
 
     .menu-search__input {
@@ -258,13 +275,12 @@
     /* Lecturers */
     .lecturer__item {
         width: 100%;
-
     }
 
     /* Feedback */
     .feedback__list {
         grid-template-columns: 1fr;
-        gap: 30px 0;    
+        gap: 30px 0;
     }
 
     /* Footer */
