--- a/assets/css/blogs-responsive.css
+++ b/assets/css/blogs-responsive.css
@@ -37,6 +37,19 @@
         display: none;
     }
 
+    .menu-action__cart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+        color: #fff;
+        width: 42px;
+        height: 42px;
+        background: transparent;
+        border: 2px solid #fff;
+        border-radius: 50%;
+    }
+
     .toogle-menu {
         width: 32px;
         color: #fff;
@@ -136,8 +149,6 @@
     .mobile-blogs {
         display: none;
     }
-
-   
 }
 
 /* Mobile */
@@ -159,12 +170,16 @@
         font-size: 24px;
     }
 
+    .menu-action__cart {
+        margin-left: auto;
+    }
+    
     .toogle-menu {
         width: 28px;
     }
 
     .menu-drawer {
-        inset: 0;
+        inset: 0 0 0 25%;
     }
 
     .menu-search__input {
