--- a/assets/css/courses-responsive.css
+++ b/assets/css/courses-responsive.css
@@ -24,7 +24,6 @@
     .logo__branch {
         font-size: 24px;
     }
-    
 
     .seperate {
         margin: 18px 0;
@@ -32,6 +31,19 @@
     }
     .nav {
         display: none;
+    }
+
+    .menu-action__cart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+        color: #fff;
+        width: 42px;
+        height: 42px;
+        background: transparent;
+        border: 2px solid #fff;
+        border-radius: 50%;
     }
 
     .toogle-menu {
@@ -94,7 +106,7 @@
         margin-top: 24px;
         color: #000;
     }
-    
+
     .menu-navbar__link {
         display: flex;
         column-gap: 16px;
@@ -156,12 +168,16 @@
         font-size: 24px;
     }
 
+    .menu-action__cart {
+        margin-left: auto;
+    }
+
     .toogle-menu {
         width: 28px;
     }
 
     .menu-drawer {
-        inset: 0;
+        inset: 0 0 0 25%;
     }
 
     .menu-search__input {
@@ -193,7 +209,7 @@
 
     /* Courses */
 
-    .courses-area { 
+    .courses-area {
         padding: 50px 0;
     }
     .courses__list {
@@ -205,7 +221,6 @@
     .courses-item__desc {
         white-space: normal;
     }
-    
 
     /* Footer */
     .footer__row {
